# hootvoice

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  about-md.hbs  about.toml  build.sh  justfile
.cargo/: config.toml
.github/actions/setup-platform/: action.yml
.github/workflows/: ci.yml  release.yml
assets/: THIRD_PARTY_LICENSES.md
docs/: CNAME  index.html  index.ja.html  linux.md  llm-postprocess.html  llm-postprocess.ja.html  manual.html  manual.ja.html  style.css
i18n/en/: app.ftl
i18n/ja/: app.ftl
packaging/: README-icons.txt
packaging/icons/: hootvoice.icns
packaging/macos/: entitlements.plist
scripts/: make_appimage.sh  make_macos_app.sh  make_macos_dmg.sh  sign_and_notarize_macos.sh
sounds/: README.md
src/: app.rs  audio.rs  core.rs  dictionary.rs  gui.rs  hotkey.rs  i18n.rs  lib.rs  macos.rs  main.rs  transcription.rs  utils.rs
src/app/: chunk_processor.rs
src/audio/: stream.rs  vad.rs
src/core/: audio_io.rs  chunk_processor.rs  output.rs  postprocess.rs  transcriber.rs
src/gui/: app.rs  floating.rs  fonts.rs  launcher.rs  settings.rs  waybar.rs  wizard.rs
src/gui/settings/: audio_meter.rs  audio_test.rs  dictionary_tab.rs  hotkey.rs  persistence.rs  ui_sections.rs  whisper_models.rs
src/llm/: history.rs  mod.rs
src/macos/: menu.rs  ui.rs
src/transcription/: model.rs  whisper.rs
src/utils/: keyboard.rs  logfile.rs  mic.rs  open.rs  paths.rs  pipewire.rs  pw_gst.rs  sound.rs  update.rs
